# metaflow-example

./: .gitignore  LICENSE  README.md  mobilevit_xxs.tflite  pyproject.toml  train_report.txt
src/: main.py  model.py  preprocessing.py
