[tool.poetry]
name = "metaflow-example"
version = "0.1.0"
description = "Example of MetaFlow usage"
authors = ["ni.andreev <ni.andreev@x5.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.6.0"
tensorflow-addons = "^0.14.0"
tensorflow-datasets = "^4.4.0"
metaflow = "^2.4.3"
protobuf = "^3.19.1"
keras = "2.6.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
length_sort = true
force_sort_within_sections = true
line_length = 100